# ImageEditor

./: CMakeLists.txt  ImgFormatConv.cpp  ImgFormatConv.h  ImgOperation.cpp  ImgOperation.h  README.md  testFormat.cpp  testResize.cpp
